# PartInspect

./: .gitignore  README.md  docker-compose.yml  start.sh
docs/: PartInspect.pptx
ros2_ws/src/inspection_system/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/inspection_system/config/: bridge_config.yml
ros2_ws/src/inspection_system/launch/: inspection_system.launch.py
ros2_ws/src/inspection_system/models/conveyor_belt/: model.config  model.sdf
ros2_ws/src/inspection_system/models/parts_bin/: model.config  model.sdf
ros2_ws/src/inspection_system/models/small_box/: model.config  model.sdf
ros2_ws/src/inspection_system/models/small_cone/: model.config  model.sdf
ros2_ws/src/inspection_system/models/solenoid/: model.config  model.sdf
ros2_ws/src/inspection_system/src/: check_node.cpp  cleaner_node.cpp  controller_node.cpp  dummy_camera_node.cpp  pusher_node.cpp  vision_node.cpp
ros2_ws/src/inspection_system/worlds/: inspection_system_world.sdf
